@@ -5,6 +5,7 @@ import com.mimka.shoplocbe.dto.product.PromotionDTO;
 import com.mimka.shoplocbe.entities.Commerce;
 import com.mimka.shoplocbe.entities.Product;
 import com.mimka.shoplocbe.entities.Promotion;
+import com.mimka.shoplocbe.entities.PromotionType;
 import com.mimka.shoplocbe.exception.CommerceNotFoundException;
 import com.mimka.shoplocbe.exception.ProductException;
 import com.mimka.shoplocbe.repositories.PromotionRepository;
@@ -15,50 +16,63 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class PromotionFacadeImpl implements PromotionFacade {
 
     private final PromotionService promotionService;
 
-    private final ProductService productService;
-
     private final CommerceService commerceService;
 
     private final ProductDTOUtil productDTOUtil;
 
     @Autowired
-    public PromotionFacadeImpl(PromotionService promotionService, ProductService productService, CommerceService commerceService, ProductDTOUtil productDTOUtil) {
+    public PromotionFacadeImpl(PromotionService promotionService, CommerceService commerceService, ProductDTOUtil productDTOUtil) {
         this.promotionService = promotionService;
-        this.productService = productService;
         this.commerceService = commerceService;
         this.productDTOUtil = productDTOUtil;
     }
 
     @Override
-    public PromotionDTO createOfferPromotion(PromotionDTO promotionDTO) throws CommerceNotFoundException, ProductException {
-        Product product = this.productService.getProduct(promotionDTO.getProductId());
-        Promotion promotion = this.promotionService.createOfferPromotion(promotionDTO, product);
+    public PromotionDTO createOfferPromotion(PromotionDTO promotionDTO, Long commerceId) throws CommerceNotFoundException {
+        Commerce commerce = this.commerceService.getCommerce(commerceId);
+        Promotion promotion = this.promotionService.createOfferPromotion(promotionDTO, commerce);
 
         return this.productDTOUtil.toPromotionDTO(promotion);
     }
 
     @Override
-    public PromotionDTO createDiscountPromotion(PromotionDTO promotionDTO) throws ProductException, CommerceNotFoundException {
-        Product product = this.productService.getProduct(promotionDTO.getProductId());
-        Promotion promotion = this.promotionService.createDiscountPromotion(promotionDTO, product);
+    public PromotionDTO createDiscountPromotion(PromotionDTO promotionDTO, Long commerceId) throws CommerceNotFoundException {
+        Commerce commerce = this.commerceService.getCommerce(commerceId);
+        Promotion promotion = this.promotionService.createDiscountPromotion(promotionDTO, commerce);
 
         return this.productDTOUtil.toPromotionDTO(promotion);
     }
 
     @Override
-    public List<PromotionDTO> getCommercePromotions(Long commerceId) throws CommerceNotFoundException {
+    public PromotionDTO getPromotion(Long promotionId) {
+        return this.productDTOUtil.toPromotionDTO(this.promotionService.getPromotion(promotionId));
+    }
+
+    private List<PromotionDTO> getCommercePromotions(Long commerceId, String promotionType) throws CommerceNotFoundException {
         Commerce commerce = this.commerceService.getCommerce(commerceId);
         List<Promotion> promotions = this.promotionService.getCommercePromotions(commerce);
 
-        return promotions
-                .stream()
-                .map(productDTOUtil::toPromotionDTO).toList();
+        return promotions.stream()
+                .filter(promotion -> promotion.getPromotionType().equals(promotionType))
+                .map(productDTOUtil::toPromotionDTO)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<PromotionDTO> getCommerceOfferPromotions(Long commerceId) throws CommerceNotFoundException {
+        return this.getCommercePromotions(commerceId, PromotionType.OFFER.name());
+    }
+
+    @Override
+    public List<PromotionDTO> getCommerceDiscountPromotions(Long commerceId) throws CommerceNotFoundException {
+        return this.getCommercePromotions(commerceId, PromotionType.DISCOUNT.name());
     }
 }
 
